# BigNum

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  coverage.sh  run.sh  todo
.cache/clangd/index/: Assertions.hpp.A815381474D1A927.idx  BigNum.cpp.57DD5BCF1FD5F0A8.idx  BigNum.hpp.DA97E1AD5339CD30.idx  main.cpp.31EACEE33F1AF618.idx  sandbox.cpp.38FB8DB67CDE6E10.idx  tests.cc.07FD5D295CE21A6B.idx  tests.cpp.4863F7D454391672.idx
build-qt/: .ninja_deps  .ninja_log  BigNum_sandbox  BigNum_test  BigNum_test[1]_include.cmake  BigNum_test[1]_tests.cmake  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-qt/.cmake/api/v1/reply/: codemodel-v2-9a8804be45bb253e7a66.json  directory-_deps.googletest-build-Debug-7ec0eb1af5fb8c695030.json  directory-_deps.googletest-build.googletest-Debug-ac995ccce6d2e91f22ec.json  index-2024-01-31T16-55-20-0671.json  target-BigNum-Debug-10b2491b377e2fcf9f89.json  target-BigNum_sandbox-Debug-63c691a93f9be957fa3a.json  target-BigNum_test-Debug-8a7fe7a283db5adc8e54.json  target-gmock-Debug-af1967922734a2743202.json  target-gmock_main-Debug-a6707c999a9b00e392b6.json  target-gtest-Debug-6d6b356f17c257e8e072.json  target-gtest_main-Debug-5d1280079f18cddb62ed.json
build-qt/.cmake/api/v1/reply.prev/: cache-v2-f7473ecac5c905e55d67.json  cmakeFiles-v1-42db312aa755ce9bb50b.json  codemodel-v2-92709a33bae680a34f99.json  directory-_deps.googletest-build.googlemock-Debug-c3f243aa00e380eb0983.json  index-2024-01-27T22-29-57-0016.json  target-BigNum-Debug-2cd35d232c1fc72e36c7.json  target-BigNum_sandbox-Debug-a26331be703185ee26ce.json  target-BigNum_test-Debug-51b9e7dd117091890aa4.json  target-gmock-Debug-e71be624f4e535b50e2c.json  target-gmock_main-Debug-7a16ddcf5ad5b3121916.json  target-gtest-Debug-3fd72767cadae3edc1ab.json  target-gtest_main-Debug-36641f8eb0adfbe062b3.json
build-qt/.qtc_clangd/: compile_commands.json
build-qt/.qtc_clangd/.cache/clangd/index/: Assertions.hpp.F2320C19B45C43A5.idx  BigNum.cpp.6A016859EE54BD6F.idx  BigNum.hpp.AC94F5193A06165D.idx  Python.h.D18FDD6CA227E641.idx  __stddef_max_align_t.h.220AC2A5D34EA379.idx  abstract.h.278A386AC4C10F65.idx  abstract.h.B2CD0D7E50D6460F.idx  align.h.9FB78D0178B8447B.idx  alloc_traits.h.F3E78247041F0BBB.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.5941484D80F2DFAD.idx  allocator.h.C73F7957609C8D1B.idx  any.6B16087AB53F173A.idx  array.964D276A88C4B6FD.idx  atomic.C3F277D98C9C5E57.idx  atomic_base.h.8E30BE0CABE3A9D8.idx  atomic_lockfree_defines.h.46BD099A8436F7E3.idx  atomic_timed_wait.h.A90808EDD15597D2.idx  atomic_wait.h.B246D7B0B572D119.idx  auto_ptr.h.8E36BE2C90FE0884.idx  basic_ios.h.80C6E45AB0922292.idx  basic_ios.tcc.22DE5D8007B9855F.idx  basic_string.h.B5C6A696D1425819.idx  basic_string.tcc.7E353E526AF1CF03.idx  bit.97A6729171C74BEB.idx  (+330 more)
include/BigNum/: Assertions.hpp  BigNum.hpp  trololo.hpp
src/: BigNum.cpp  dump.cpp
tests/: coeff_string  pi_eval.cpp  pi_string  sandbox.cpp  tests.cpp
